hphp/hack/test/typecheck/reactive/test_freeze2.php.exp
File "test_freeze2.php", line 20, characters 25-26:
This variable is unset (via Rx\freeze or Rx\move) in one scope but not the other (Typing[4209])
